frontend/test/should_fail/index_isin_same_candidate_mismatch.grg
#using "index_count_model.gm"

rule i {
	-e:Edge->;
	
	if{ isInNodesFromIndexSame(e, fooi, 42.0); }
	
	modify {
	}
}
